# SATySFi-make-saty

./: .gitignore  Makefile  README.md  Satyristes  annot.satyh-satysfi  satysfi-base.satyh-satysfi  satysfi-make-saty.opam  stdja.satyh-satysfi  test.saty
doc/: doc-ja.md
