opam-version: "2.0"
name: "satysfi-make-saty"
version: "0.1.0"
synopsis: "outputting saty file using SATySFi's text-mode."
description: """outputting saty file using SATySFi's text-mode."""

maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "MIT"
homepage: "https://github.com/puripuri2100/SATySFi-make-saty"
bug-reports: "https://github.com/puripuri2100/SATySFi-make-saty/issues"
dev-repo: "git+https://github.com/puripuri2100/SATySFi-make-saty.git"

depends: [
  "satysfi" {>= "0.0.3" & < "0.0.5"}
  "satyrographos" {>= "0.0.2" & < "0.0.4"}
]
build: [ ]
install: [
  ["satyrographos" "opam" "install"
   "-name" "make-saty"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]